Add missing spanish translations

--- a/i18n/es_ES/LC_MESSAGES/asternic_cdr.po
+++ b/i18n/es_ES/LC_MESSAGES/asternic_cdr.po
@@ -193,4 +193,10 @@ msgstr "Martes"
 msgid "Monday"
 msgstr "Lunes"
 
+msgid "Combined"
+msgstr "Combinado"
+
+msgid "Incoming / Outgoing"
+msgstr "Entrante / Saliente"
+
 
