Correct spanish translation

--- a/i18n/es_ES/LC_MESSAGES/asternic_cdr.po
+++ b/i18n/es_ES/LC_MESSAGES/asternic_cdr.po
@@ -197,6 +197,6 @@ msgid "Combined"
 msgstr "Combinado"
 
 msgid "Incoming / Outgoing"
-msgstr "Entrante / Saliente"
+msgstr "Entrantes / Salientes"
 
 
