Update spanish translations

--- a/i18n/es_ES/LC_MESSAGES/asternic_cdr.po
+++ b/i18n/es_ES/LC_MESSAGES/asternic_cdr.po
@@ -216,3 +216,9 @@ msgstr "Disposición"
 
 msgid "Listen"
 msgstr "Escuchar"
+
+msgid "Play"
+msgstr "Reproducir"
+
+msgid "Download"
+msgstr "Descargar"
