Add spanish translation for internal calls

--- a/i18n/es_ES/LC_MESSAGES/asternic_cdr.po
+++ b/i18n/es_ES/LC_MESSAGES/asternic_cdr.po
@@ -222,3 +222,12 @@ msgstr "Reproducir"
 
 msgid "Download"
 msgstr "Descargar"
+
+msgid "Total Internal Calls"
+msgstr "Total de llamadas internas"
+
+msgid "Total Internal Minutes"
+msgstr "Total de Minutos Internas"
+
+msgid "Average Internal Call Duration"
+msgstr "Duración Promedio Internas"
